--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Akshay5851/Raw_Node#readme",
   "dependencies": {
     "express": "^4.19.2",
+    "mysql": "^2.18.1",
     "nodemon": "^3.1.4"
   }
 }
